1. fixed show-status-locked div spacing *TEST AT PROJECTORadd .

--- a/app/assets/stylesheets/locks.scss
+++ b/app/assets/stylesheets/locks.scss
@@ -229,6 +229,10 @@ h6.btn {
   font-size: 2.8rem;
 }
 
+#lock-status-container {
+  margin: 0rem 1rem 0rem 1rem;
+}
+
 
 
 
